# deploy.rs

./: .gitignore  Cargo.toml  README.md  example.json  example_cert.json
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
src/: lib.rs  main.rs
src/core/: constants.rs
src/deployment/: deployment.rs  mod.rs  packaging.rs
src/serialization/: config.rs  deploy_package.rs  deploy_target.rs  mod.rs
src/states/: base_state.rs  mod.rs  ui_state.rs
src/ui/: render_manager.rs
