[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.28.1", features = ["default"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
russh = { version = "0.45.0" }
russh-keys = { version = "0.45.0" }
serde_json = "1.0.128"
futures = "0.3.30"
tar = "0.4"
flate2 = "1.0.33"
async-trait = "0.1.83"
anyhow = "1.0.89"
tempfile = "3.12.0"
sha1 = "0.10.6"
russh-sftp = "2.0.3"
tokio-util = { version = "0.7.12", features = ["io"] }
