[package]
name = "deploy"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["default"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
russh = { version = "0.51.1" }
serde_json = "1.0.140"
futures = "0.3.31"
tar = "0.4"
flate2 = "1.1.1"
anyhow = "1.0.97"
tempfile = "3.19.1"
sha1 = "0.10.6"
russh-sftp = "2.1.0"
tokio-util = { version = "0.7.14", features = ["io"] }
