[package]
name = "deploy"
version = "1.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["default"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
russh = { version = "0.54.4" }
serde_json = "1.0.145"
futures = "0.3.31"
tar = "0.4"
flate2 = "1.1.2"
anyhow = "1.0.100"
tempfile = "3.23.0"
sha1 = "0.10.6"
russh-sftp = "2.1.1"
tokio-util = { version = "0.7.16", features = ["io"] }
